MyFirstProject/src/objects/Recruitment__c.object
<CustomObject>
    <description>Recruited candidates</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>This is Address</description>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Of_Birth__c</fullName>
        <description>This is DOB</description>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This is name</description>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>This is percentage field</description>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_No__c</fullName>
        <description>This is phone no</description>
        <label>Phone No</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previous_company_Name__c</fullName>
        <description>Name of previous company</description>
        <label>Previous company Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <description>This is Qualification details</description>
        <label>Qualification</label>
        <picklist>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <label>Specialisation</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Checks percentage and decides status accordingly</description>
        <formula>IF( 
   Percentage__c  &gt;  54.99 &amp;&amp;  Percentage__c &lt; 60.00,
   &quot;Eligible&quot;,  
   IF(
     Percentage__c  &gt;59.99 &amp;&amp;  Percentage__c &lt; 65.00,
     &quot;Stage 1&quot;,
     IF( 
       Percentage__c &gt; 64.99,
       &quot;Selected&quot;,
       &quot;Not Eligible&quot; 
     )
  ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <description>This is Years of experience</description>
        <label>Years of Experience</label>
        <picklist>
            <picklistValues>
                <fullName>0 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2+ years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Recruitment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>REC-{000000}</displayFormat>
        <label>Recruitment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recruitments</pluralLabel>
    <recordTypes>
        <fullName>Experience</fullName>
        <active>true</active>
        <label>Experience</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fresher</fullName>
        <active>true</active>
        <label>Fresher</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Percentage_validation</fullName>
        <active>true</active>
        <description>Percentage field cannot be blank</description>
        <errorConditionFormula>ISNULL( Percentage__c )</errorConditionFormula>
        <errorDisplayField>Percentage__c</errorDisplayField>
        <errorMessage>Percentage field cannot be null</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qualification_required</fullName>
        <active>true</active>
        <description>Qualification field cannot be blank</description>
        <errorConditionFormula>ISPICKVAL( Qualification__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Qualification__c</errorDisplayField>
        <errorMessage>Select Qualification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test</fullName>
        <active>true</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>This is true</errorMessage>
    </validationRules>
</CustomObject>